--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "contentlayer build && next build",
+    "build": "contentlayer build && next build && next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,6 +14,7 @@
     "date-fns": "^2.30.0",
     "next": "^13.5.7",
     "next-contentlayer": "^0.3.4",
+    "next-sitemap": "^4.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-autolink-headings": "^6.1.1",
