--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,38 @@ jobs:
         env:
           NEXT_PUBLIC_BASE_URL: ${{ secrets.NEXT_PUBLIC_BASE_URL }}
 
+      - name: Create .htaccess
+        run: |
+          echo "RewriteEngine On" > ./out/.htaccess
+          echo "" >> ./out/.htaccess
+          echo "# If the requested resource exists as a file or directory, serve it directly" >> ./out/.htaccess
+          echo "RewriteCond %{REQUEST_FILENAME} !-f" >> ./out/.htaccess
+          echo "RewriteCond %{REQUEST_FILENAME} !-d" >> ./out/.htaccess
+          echo "" >> ./out/.htaccess
+          echo "# If the request doesn't end in .html, add .html internally" >> ./out/.htaccess
+          echo "RewriteCond %{REQUEST_URI} !\.html$" >> ./out/.htaccess
+          echo "RewriteRule ^([^.]+)$ $1.html [L]" >> ./out/.htaccess
+          echo "" >> ./out/.htaccess
+          echo "# Handle 404 errors" >> ./out/.htaccess
+          echo "ErrorDocument 404 /404.html" >> ./out/.htaccess
+          echo "" >> ./out/.htaccess
+          echo "# Enable CORS" >> ./out/.htaccess
+          echo "Header set Access-Control-Allow-Origin \"*\"" >> ./out/.htaccess
+          echo "" >> ./out/.htaccess
+          echo "# Security headers" >> ./out/.htaccess
+          echo "Header set X-Content-Type-Options \"nosniff\"" >> ./out/.htaccess
+          echo "Header set X-Frame-Options \"SAMEORIGIN\"" >> ./out/.htaccess
+          echo "Header set X-XSS-Protection \"1; mode=block\"" >> ./out/.htaccess
+          echo "" >> ./out/.htaccess
+          echo "# Cache control" >> ./out/.htaccess
+          echo "<FilesMatch \"\.(html|htm)$\">" >> ./out/.htaccess
+          echo "    Header set Cache-Control \"max-age=0, private, no-cache, no-store, must-revalidate\"" >> ./out/.htaccess
+          echo "</FilesMatch>" >> ./out/.htaccess
+          echo "" >> ./out/.htaccess
+          echo "<FilesMatch \"\.(js|css|jpg|jpeg|png|gif|ico|svg|woff|woff2)$\">" >> ./out/.htaccess
+          echo "    Header set Cache-Control \"max-age=31536000, public\"" >> ./out/.htaccess
+          echo "</FilesMatch>" >> ./out/.htaccess
+
       - name: 📂 Deploy to Hostinger
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
