--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,35 +27,35 @@ jobs:
 
       - name: Create .htaccess
         run: |
-          echo "RewriteEngine On" > ./out/.htaccess
-          echo "" >> ./out/.htaccess
-          echo "# If the requested resource exists as a file or directory, serve it directly" >> ./out/.htaccess
-          echo "RewriteCond %{REQUEST_FILENAME} !-f" >> ./out/.htaccess
-          echo "RewriteCond %{REQUEST_FILENAME} !-d" >> ./out/.htaccess
-          echo "" >> ./out/.htaccess
-          echo "# If the request doesn't end in .html, add .html internally" >> ./out/.htaccess
-          echo "RewriteCond %{REQUEST_URI} !\.html$" >> ./out/.htaccess
-          echo "RewriteRule ^([^.]+)$ $1.html [L]" >> ./out/.htaccess
-          echo "" >> ./out/.htaccess
-          echo "# Handle 404 errors" >> ./out/.htaccess
-          echo "ErrorDocument 404 /404.html" >> ./out/.htaccess
-          echo "" >> ./out/.htaccess
-          echo "# Enable CORS" >> ./out/.htaccess
-          echo "Header set Access-Control-Allow-Origin \"*\"" >> ./out/.htaccess
-          echo "" >> ./out/.htaccess
-          echo "# Security headers" >> ./out/.htaccess
-          echo "Header set X-Content-Type-Options \"nosniff\"" >> ./out/.htaccess
-          echo "Header set X-Frame-Options \"SAMEORIGIN\"" >> ./out/.htaccess
-          echo "Header set X-XSS-Protection \"1; mode=block\"" >> ./out/.htaccess
-          echo "" >> ./out/.htaccess
-          echo "# Cache control" >> ./out/.htaccess
-          echo "<FilesMatch \"\.(html|htm)$\">" >> ./out/.htaccess
-          echo "    Header set Cache-Control \"max-age=0, private, no-cache, no-store, must-revalidate\"" >> ./out/.htaccess
-          echo "</FilesMatch>" >> ./out/.htaccess
-          echo "" >> ./out/.htaccess
-          echo "<FilesMatch \"\.(js|css|jpg|jpeg|png|gif|ico|svg|woff|woff2)$\">" >> ./out/.htaccess
-          echo "    Header set Cache-Control \"max-age=31536000, public\"" >> ./out/.htaccess
-          echo "</FilesMatch>" >> ./out/.htaccess
+          echo "RewriteEngine On" > ./.next/.htaccess
+          echo "" >> ./.next/.htaccess
+          echo "# If the requested resource exists as a file or directory, serve it directly" >> ./.next/.htaccess
+          echo "RewriteCond %{REQUEST_FILENAME} !-f" >> ./.next/.htaccess
+          echo "RewriteCond %{REQUEST_FILENAME} !-d" >> ./.next/.htaccess
+          echo "" >> ./.next/.htaccess
+          echo "# If the request doesn't end in .html, add .html internally" >> ./.next/.htaccess
+          echo "RewriteCond %{REQUEST_URI} !\.html$" >> ./.next/.htaccess
+          echo "RewriteRule ^([^.]+)$ $1.html [L]" >> ./.next/.htaccess
+          echo "" >> ./.next/.htaccess
+          echo "# Handle 404 errors" >> ./.next/.htaccess
+          echo "ErrorDocument 404 /404.html" >> ./.next/.htaccess
+          echo "" >> ./.next/.htaccess
+          echo "# Enable CORS" >> ./.next/.htaccess
+          echo "Header set Access-Control-Allow-Origin \"*\"" >> ./.next/.htaccess
+          echo "" >> ./.next/.htaccess
+          echo "# Security headers" >> ./.next/.htaccess
+          echo "Header set X-Content-Type-Options \"nosniff\"" >> ./.next/.htaccess
+          echo "Header set X-Frame-Options \"SAMEORIGIN\"" >> ./.next/.htaccess
+          echo "Header set X-XSS-Protection \"1; mode=block\"" >> ./.next/.htaccess
+          echo "" >> ./.next/.htaccess
+          echo "# Cache control" >> ./.next/.htaccess
+          echo "<FilesMatch \"\.(html|htm)$\">" >> ./.next/.htaccess
+          echo "    Header set Cache-Control \"max-age=0, private, no-cache, no-store, must-revalidate\"" >> ./.next/.htaccess
+          echo "</FilesMatch>" >> ./.next/.htaccess
+          echo "" >> ./.next/.htaccess
+          echo "<FilesMatch \"\.(js|css|jpg|jpeg|png|gif|ico|svg|woff|woff2)$\">" >> ./.next/.htaccess
+          echo "    Header set Cache-Control \"max-age=31536000, public\"" >> ./.next/.htaccess
+          echo "</FilesMatch>" >> ./.next/.htaccess
 
       - name: 📂 Deploy to Hostinger
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
