--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,9 +4,11 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-# If the request doesn't end in .html, add .html internally
-RewriteCond %{REQUEST_URI} !\.html$
-RewriteRule ^([^.]+)$ $1.html [L]
+# Handle blog routes
+RewriteRule ^blog/([^/]+)/?$ /blog/$1.html [L]
+
+# Handle other routes
+RewriteRule ^([^.]+)/?$ /$1.html [L]
 
 # Handle 404 errors
 ErrorDocument 404 /404.html
@@ -19,11 +21,12 @@ Header set X-Content-Type-Options "nosniff"
 Header set X-Frame-Options "SAMEORIGIN"
 Header set X-XSS-Protection "1; mode=block"
 
-# Cache control
+# Cache control for HTML files
 <FilesMatch "\.(html|htm)$">
     Header set Cache-Control "max-age=0, private, no-cache, no-store, must-revalidate"
 </FilesMatch>
 
+# Cache control for static assets
 <FilesMatch "\.(js|css|jpg|jpeg|png|gif|ico|svg|woff|woff2)$">
     Header set Cache-Control "max-age=31536000, public"
 </FilesMatch>
