--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,14 +1,15 @@
 RewriteEngine On
+RewriteBase /
 
 # If the requested resource exists as a file or directory, serve it directly
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-# Handle blog routes
-RewriteRule ^blog/([^/]+)/?$ /blog/$1.html [L]
-
-# Handle other routes
-RewriteRule ^([^.]+)/?$ /$1.html [L]
+# Handle all routes by redirecting to the HTML file
+RewriteCond %{REQUEST_URI} !\.html$
+RewriteCond %{REQUEST_URI} !\.(?:js|css|jpg|jpeg|png|gif|ico|svg|woff|woff2)$ [NC]
+RewriteRule ^([^/]+)/([^/]+)/?$ /$1/$2.html [L]
+RewriteRule ^([^/]+)/?$ /$1.html [L]
 
 # Handle 404 errors
 ErrorDocument 404 /404.html
