--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "contentlayer build && next build && next-sitemap",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "npm run build && git add public/sitemap.xml && git commit -m 'deploy' && git push origin main"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
